// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Server Status Indicator > should render as downgraded 1`] = `
<DocumentFragment>
  <div>
    <div
      aria-expanded="false"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle"
    >
      <div
        class="group css-c93wvv"
      >
        <button
          class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none"
          data-testid="NavigationBar__buttons--server-status"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="p-1 css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                fill="none"
                viewBox="0 0 20 15"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.595 6.285c.618-3.372 3.654-5.664 6.932-5.233 3.279.43 5.67 3.435 5.46 6.86-.21 3.426-2.948 6.092-6.252 6.088H4.912c-1.606.003-3.05-1.017-3.64-2.569-.589-1.552-.203-3.32.972-4.457a3.795 3.795 0 0 1 4.35-.69zm0 0C6.5 7 6.6 7.8 7 9"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
            <div
              class="absolute right-1 top-1 flex items-center justify-center rounded-full bg-theme-background p-1 transition-all duration-100 ease-linear group-hover:bg-theme-primary-100 dark:group-hover:bg-theme-secondary-800"
            >
              <div
                class="h-2 w-2 rounded-full bg-theme-warning-600"
              />
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Server Status Indicator > should render as healthy 1`] = `
<DocumentFragment>
  <div>
    <div
      aria-expanded="false"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle"
    >
      <div
        class="group css-c93wvv"
      >
        <button
          class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none"
          data-testid="NavigationBar__buttons--server-status"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="p-1 css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                fill="none"
                viewBox="0 0 20 15"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.595 6.285c.618-3.372 3.654-5.664 6.932-5.233 3.279.43 5.67 3.435 5.46 6.86-.21 3.426-2.948 6.092-6.252 6.088H4.912c-1.606.003-3.05-1.017-3.64-2.569-.589-1.552-.203-3.32.972-4.457a3.795 3.795 0 0 1 4.35-.69zm0 0C6.5 7 6.6 7.8 7 9"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
            <div
              class="absolute right-1 top-1 flex items-center justify-center rounded-full bg-theme-background p-1 transition-all duration-100 ease-linear group-hover:bg-theme-primary-100 dark:group-hover:bg-theme-secondary-800"
            >
              <div
                class="h-2 w-2 rounded-full bg-theme-success-700"
              />
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Server Status Indicator > should render as unavailable 1`] = `
<DocumentFragment>
  <div>
    <div
      aria-expanded="false"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle"
    >
      <div
        class="group css-c93wvv"
      >
        <button
          class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none"
          data-testid="NavigationBar__buttons--server-status"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="p-1 css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                fill="none"
                viewBox="0 0 20 15"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.595 6.285c.618-3.372 3.654-5.664 6.932-5.233 3.279.43 5.67 3.435 5.46 6.86-.21 3.426-2.948 6.092-6.252 6.088H4.912c-1.606.003-3.05-1.017-3.64-2.569-.589-1.552-.203-3.32.972-4.457a3.795 3.795 0 0 1 4.35-.69zm0 0C6.5 7 6.6 7.8 7 9"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
            <div
              class="absolute right-1 top-1 flex items-center justify-center rounded-full bg-theme-background p-1 transition-all duration-100 ease-linear group-hover:bg-theme-primary-100 dark:group-hover:bg-theme-secondary-800"
            >
              <div
                class="h-2 w-2 rounded-full bg-theme-danger-500"
              />
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Server Status Indicator > should render default 1`] = `
<DocumentFragment>
  <div>
    <div
      aria-expanded="false"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle"
    >
      <div
        class="group css-c93wvv"
      >
        <button
          class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none"
          data-testid="NavigationBar__buttons--server-status"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="p-1 css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                fill="none"
                viewBox="0 0 20 15"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.595 6.285c.618-3.372 3.654-5.664 6.932-5.233 3.279.43 5.67 3.435 5.46 6.86-.21 3.426-2.948 6.092-6.252 6.088H4.912c-1.606.003-3.05-1.017-3.64-2.569-.589-1.552-.203-3.32.972-4.457a3.795 3.795 0 0 1 4.35-.69zm0 0C6.5 7 6.6 7.8 7 9"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
            <div
              class="absolute right-1 top-1 flex items-center justify-center rounded-full bg-theme-background p-1 transition-all duration-100 ease-linear group-hover:bg-theme-primary-100 dark:group-hover:bg-theme-secondary-800"
            >
              <div
                class="h-2 w-2 rounded-full bg-theme-gray-100"
              />
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Server Status Indicator > should render in lg 1`] = `
<DocumentFragment>
  <div>
    <div
      aria-expanded="false"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle"
    >
      <div
        class="group css-c93wvv"
      >
        <button
          class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none"
          data-testid="NavigationBar__buttons--server-status"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="p-1 css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                fill="none"
                viewBox="0 0 20 15"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.595 6.285c.618-3.372 3.654-5.664 6.932-5.233 3.279.43 5.67 3.435 5.46 6.86-.21 3.426-2.948 6.092-6.252 6.088H4.912c-1.606.003-3.05-1.017-3.64-2.569-.589-1.552-.203-3.32.972-4.457a3.795 3.795 0 0 1 4.35-.69zm0 0C6.5 7 6.6 7.8 7 9"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
            <div
              class="absolute right-1 top-1 flex items-center justify-center rounded-full bg-theme-background p-1 transition-all duration-100 ease-linear group-hover:bg-theme-primary-100 dark:group-hover:bg-theme-secondary-800"
            >
              <div
                class="h-2 w-2 rounded-full bg-theme-success-700"
              />
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Server Status Indicator > should render in md 1`] = `
<DocumentFragment>
  <div>
    <div
      aria-expanded="false"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle"
    >
      <div
        class="group css-c93wvv"
      >
        <button
          class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none"
          data-testid="NavigationBar__buttons--server-status"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="p-1 css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                fill="none"
                viewBox="0 0 20 15"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.595 6.285c.618-3.372 3.654-5.664 6.932-5.233 3.279.43 5.67 3.435 5.46 6.86-.21 3.426-2.948 6.092-6.252 6.088H4.912c-1.606.003-3.05-1.017-3.64-2.569-.589-1.552-.203-3.32.972-4.457a3.795 3.795 0 0 1 4.35-.69zm0 0C6.5 7 6.6 7.8 7 9"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
            <div
              class="absolute right-1 top-1 flex items-center justify-center rounded-full bg-theme-background p-1 transition-all duration-100 ease-linear group-hover:bg-theme-primary-100 dark:group-hover:bg-theme-secondary-800"
            >
              <div
                class="h-2 w-2 rounded-full bg-theme-success-700"
              />
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Server Status Indicator > should render in sm 1`] = `
<DocumentFragment>
  <div>
    <div
      aria-expanded="false"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle"
    >
      <div
        class="group css-c93wvv"
      >
        <button
          class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none"
          data-testid="NavigationBar__buttons--server-status"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="p-1 css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                fill="none"
                viewBox="0 0 20 15"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.595 6.285c.618-3.372 3.654-5.664 6.932-5.233 3.279.43 5.67 3.435 5.46 6.86-.21 3.426-2.948 6.092-6.252 6.088H4.912c-1.606.003-3.05-1.017-3.64-2.569-.589-1.552-.203-3.32.972-4.457a3.795 3.795 0 0 1 4.35-.69zm0 0C6.5 7 6.6 7.8 7 9"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
            <div
              class="absolute right-1 top-1 flex items-center justify-center rounded-full bg-theme-background p-1 transition-all duration-100 ease-linear group-hover:bg-theme-primary-100 dark:group-hover:bg-theme-secondary-800"
            >
              <div
                class="h-2 w-2 rounded-full bg-theme-success-700"
              />
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Server Status Indicator > should render in xl 1`] = `
<DocumentFragment>
  <div>
    <div
      aria-expanded="false"
      aria-haspopup="dialog"
      data-testid="dropdown__toggle"
    >
      <div
        class="group css-c93wvv"
      >
        <button
          class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none"
          data-testid="NavigationBar__buttons--server-status"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="p-1 css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                fill="none"
                viewBox="0 0 20 15"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.595 6.285c.618-3.372 3.654-5.664 6.932-5.233 3.279.43 5.67 3.435 5.46 6.86-.21 3.426-2.948 6.092-6.252 6.088H4.912c-1.606.003-3.05-1.017-3.64-2.569-.589-1.552-.203-3.32.972-4.457a3.795 3.795 0 0 1 4.35-.69zm0 0C6.5 7 6.6 7.8 7 9"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
            <div
              class="absolute right-1 top-1 flex items-center justify-center rounded-full bg-theme-background p-1 transition-all duration-100 ease-linear group-hover:bg-theme-primary-100 dark:group-hover:bg-theme-secondary-800"
            >
              <div
                class="h-2 w-2 rounded-full bg-theme-success-700"
              />
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
